# btcusd-ml-predictor

./: .gitignore  README.md  TODO.md  add_high_threshold_signals.py  bug_summary.md  check_columns.py  claude_prompt.md  direct_fix_and_run.py  fix_high_threshold_signals.py  fix_target_variables.py  generate_high_threshold_signals.py  generate_sample_data.py  main.ipynb  main.py  model_import_fix.txt  pipeline_output.txt  pyproject.toml  run_data_processing.py  run_fix_target_variables.py  run_high_threshold_evaluation.py  run_high_threshold_training.py  run_pipeline.py  simple_model_evaluate.py  simple_model_train.py  verify_and_fix_csv.py  機械学習モデル構築 要件定義書.md
config/: data_config.json  model_config.json
data_collector/: __init__.py  bybit_collector.py
data_processor/: __init__.py  feature_engineering.py  optimized_feature_generator.py
data_processor/feature_modules/: __init__.py  advanced_features.py  feature_generator_base.py  feature_selector.py  moving_average_features.py  oscillator_features.py  (+4 more)
debug_tools/: feature_inspector.py  train_threshold_model.py
evaluation/: model_evaluation_report.json
model_builder/: __init__.py  model_evaluator.py  model_trainer.py  utils.py
models/: classification_model_period_1.joblib  classification_model_period_2.joblib  classification_model_period_3.joblib  regression_model_period_1.joblib  regression_model_period_2.joblib  regression_model_period_3.joblib  threshold_binary_classification_model_period_1.joblib  threshold_binary_classification_model_period_2.joblib  threshold_binary_classification_model_period_3.joblib
(+40 files in other folders)
