[project]
name = "btcusd-ml-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pybotters>=1.8.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "ta-lib",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
ta-lib = { path = "../ta_lib-0.6.3-cp313-cp313-win_amd64.whl" }
